Zoeken van producten toegevoegd

--- a/datepicker/src/app/components/product-row/product-row.component.html
+++ b/datepicker/src/app/components/product-row/product-row.component.html
@@ -1,7 +1,7 @@
 <ng-container>
   <td> {{product.naam}} </td>
   <td>{{product.beschrijving}}</td>
-  <td>{{product.prijs}}</td>
+  <td id="prijs">{{product.prijs.toFixed(2)}}</td>
 </ng-container>
 
 
