--- a/datepicker/src/app/components/product-details/product-details.component.html
+++ b/datepicker/src/app/components/product-details/product-details.component.html
@@ -1,9 +1,18 @@
+
 <div class="overlay" *ngIf="popup">
   <div class="popup">
-    <h2>{{product}}</h2>
-    <a class="close" (click)="popup = false">&times;</a>
+    <h2><div id="productnaam ">{{product.naam}}</div> </h2>
+    <h3><div id="prijs">€ {{product.prijs.toFixed(2)}}</div></h3>
+    <a class="close" (click)="handleClick()">&times;</a>
     <div class="content">
-      you have selected this event
+      <table class="productDetails">
+        <tr><td>Beschrijving</td><td>{{product.beschrijving}}</td></tr>
+        <tr><td>Categorie</td><td>{{product.categorie.categorienaam}}</td></tr>
+        <tr><td>Aanbieder</td><td>{{product.aanbieder | gebruikerName}}</td></tr>
+        <tr><td>Ondersteunde bezorgwijzen</td><td>{{product.bezorgwijze.map(titleCaseWord)}}</td></tr>
+        <tr></tr>
+      </table>
     </div>
   </div>
 </div>
+
