--- a/datepicker/src/app/components/product-list/product-list.component.html
+++ b/datepicker/src/app/components/product-list/product-list.component.html
@@ -7,23 +7,7 @@
   </tr>
   <!-- <contact-row>  </contact-row> --> <!-- element -->
   <tr class="productrow" *ngFor="let product of products" product-row [product]="product"
-      (click)=handleClick(product)></tr>
-
+      (click)="handleClick(product)"></tr>
 </table>
 
-
-<div class="overlay" *ngIf="popup">
-  <div class="popup">
-    <h2>{{product.naam}}</h2>
-    <a class="close" (click)="popup = false">&times;</a>
-    <div class="content">
-      <table class="productDetails">
-        <tr>{{product.beschrijving}}</tr>
-        <tr>{{product.categorie.categorienaam}}</tr>
-        <tr>{{product.aanbieder.voornaam}} {{product.aanbieder.achternaam}}</tr>
-
-      </table>
-    </div>
-  </div>
-</div>
-
+<app-product-details [product]="selectedProduct" [popup]="popup" (close)="popup=false;"></app-product-details>
