--- a/datepicker/src/app/components/date-picker/date-picker.component.html
+++ b/datepicker/src/app/components/date-picker/date-picker.component.html
@@ -1,2 +1,2 @@
-<app-contact-form-model-driven></app-contact-form-model-driven>
-<contact-list></contact-list>
+<app-search-product></app-search-product>
+<app-product-list></app-product-list>
