--- a/datepicker/src/app/app.component.html
+++ b/datepicker/src/app/app.component.html
@@ -2,6 +2,7 @@
   <li><a routerLink="/home" routerLinkActive="activeMenu">Home</a></li>
   <li><a routerLink="/datepicker" routerLinkActive="activeMenu">Artikelen</a></li>
   <li><a routerLink="/formdemo" routerLinkActive="activeMenu">Form demo</a></li>
+  <li><button (click)="gebruikerService.uitloggen()">Uitloggen</button></li>
   <!-- <li><a routerLink="/formsdemo" routerLinkActive="activeMenu">Forms demo</a></li> -->
   <!-- <li><a>{{today}}</a></li> -->
 </ul>
