Toevoegen product en inloggen

--- a/datepicker/src/app/app.component.css
+++ b/datepicker/src/app/app.component.css
@@ -6,17 +6,30 @@ ul {
     border: 1px solid #e7e7e7;
     background-color: #f3f3f3;
   }
-  
+
   li {
     float: left;
     border-right: 1px solid #bbb;
   }
 
-  li:last-child {
-    border-right: none;
-  }
-  
+  #inloginfo {
 
+  }
+
+#laatNaamIngelogdeZien {
+  float: right;
+  /*direction: revert;*/
+  color: #caa6a6;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+li:last-child {
+  border-right: none;
+  float: right;
+  direction: revert;
+}
   li a, li #today {
     display: block;
     color: #666;
@@ -24,11 +37,11 @@ ul {
     padding: 14px 16px;
     text-decoration: none;
   }
-  
+
   li a:hover:not(.active) {
     background-color: #ddd;
   }
-  
+
   li .activeMenu {
     color: white;
     background-color: #585858;
