--- a/datepicker/src/app/components/login/login.component.html
+++ b/datepicker/src/app/components/login/login.component.html
@@ -12,11 +12,11 @@
     </div>
     <div>
       <label for="wachtwoord">Wachtwoord:</label>
-      <input type="text" id="wachtwoord" formControlName="wachtwoord">
+      <input type="password" id="wachtwoord" formControlName="wachtwoord">
       <span *ngIf="addLoginForm.get('wachtwoord')?.touched && addLoginForm.get('wachtwoord')?.invalid">*</span>
       <span *ngIf="addLoginForm.get('wachtwoord')?.touched && addLoginForm.get('wachtwoord')?.errors?.required">Vul in aub</span>
       <span *ngIf="addLoginForm.get('wachtwoord')?.touched && addLoginForm.get('wachtwoord')?.errors?.minlength">Minimaal acht tekens</span>
     </div>
-      <button>Verstuur</button>
+    <button>Verstuur</button>
   </form>
 </div>
