--- a/datepicker/src/app/app.component.html
+++ b/datepicker/src/app/app.component.html
@@ -1,9 +1,10 @@
 <ul>
-  <li><a routerLink="/artikelen" routerLinkActive="activeMenu">Artikelen</a></li>
-  <li><a routerLink="/producttoevoegen" routerLinkActive="activeMenu">Product toevoegen</a></li>
+  <li *ngIf="this.gebruikerService.ingelogdeGebruiker==null"><a routerLink="/login" routerLinkActive="activeMenu">Login</a></li>
+  <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null"><a routerLink="/artikelen" routerLinkActive="activeMenu">Artikelen</a></li>
+  <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null"><a routerLink="/producttoevoegen" routerLinkActive="activeMenu">Product toevoegen</a></li>
 
   <div id="rechterBlok">
-  <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null" id="laatNaamIngelogdeZien">Ingelogd als {{this.gebruikerService.ingelogdeGebruiker | gebruikerName}}
+    <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null"><a routerLink="/account" routerLinkActive="activeMenu" id="laatNaamIngelogdeZien">Ingelogd als {{this.gebruikerService.ingelogdeGebruiker | gebruikerName}}</a></li>
   <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null"><a routerLink="/login" routerLinkActive="activeMenu" (click)="gebruikerService.uitloggen()">Uitloggen</a></li>
   <li *ngIf="this.gebruikerService.ingelogdeGebruiker==null"></li>
   </div>
