Kleine design aanpassingen

--- a/datepicker/src/app/app.component.html
+++ b/datepicker/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngIf="this.gebruikerService.ingelogdeGebruiker==null"><a routerLink="/login" routerLinkActive="activeMenu">Login</a></li>
-  <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null"><a routerLink="/artikelen" routerLinkActive="activeMenu">Artikelen</a></li>
+  <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null"><a routerLink="/artikelen" routerLinkActive="activeMenu">Advertenties</a></li>
   <li *ngIf="this.gebruikerService.ingelogdeGebruiker!=null"><a routerLink="/producttoevoegen" routerLinkActive="activeMenu">Product toevoegen</a></li>
 
   <div id="rechterBlok">
