--- a/datepicker/src/app/components/search-product/search-product.component.html
+++ b/datepicker/src/app/components/search-product/search-product.component.html
@@ -1,3 +1,3 @@
 <div id="search-component">
-  <input placeholder="Zoek hier je product..." #searchBox id="search-box" (input)="search(searchBox.value)"/>
+  <input placeholder="Zoek hier naar advertenties..." #searchBox id="search-box" (input)="search(searchBox.value)"/>
 </div>
