--- a/datepicker/src/app/components/login/login.component.html
+++ b/datepicker/src/app/components/login/login.component.html
@@ -19,6 +19,6 @@
     </div>
     <h3>{{this.gebruikerService.bericht$ | async}}</h3>
     <br>
-    <button>Verstuur</button>
+    <button>Login</button>
   </form>
 </div>
